train a linear regressor model and see predictions

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -432,21 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<16512x5 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 16512 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "#split the dataset into training and test\n",
     "import numpy as np \n",
@@ -755,7 +745,124 @@
     "cat_encoder = CategoricalEncoder()\n",
     "housing_cat_reshaped = housing_cat.values.reshape(-1,1)\n",
     "housing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\n",
-    "housing_cat_1hot\n"
+    "\n",
+    "#create a custom data transformer\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "# column index\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # no *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self  # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                         bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]\n",
+    "\n",
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)\n",
+    "\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "#the DataFrameSelector transforms the data by selecting the desired attributes, dropping the rest, and converting the \n",
+    "#resulting DataFrame to a NumPy array\n",
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute_names):\n",
+    "        self.attribute_names = attribute_names\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute_names].values\n",
+    "    \n",
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "    \n",
+    "#custom pipeline to handle multiple data transformations at once, including using the DataFrameSelector above to only \n",
+    "#select numerical values. \n",
+    "num_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(num_attribs)),\n",
+    "    ('imputer', Imputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(cat_attribs)),\n",
+    "    ('cat_encoder', CategoricalEncoder(encoding=\"onehot-dense\")),\n",
+    "])\n",
+    "\n",
+    "#create a pipeline using a FeatureUnion to handle both types of attribs at once\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "    (\"num_pipeline\", num_pipeline),\n",
+    "    (\"cat_pipeline\", cat_pipeline),\n",
+    "])\n",
+    "\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#start training model here\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "#create a linear regression model\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "\n",
+    "#some_data = housing.iloc[:5]\n",
+    "#some_labels = housing_labels.iloc[:5]\n",
+    "#some_data_prepared = full_pipeline.transform(some_data)\n",
+    "#print(\"Predictions: \", lin_reg.predict(some_data_prepared))\n",
+    "#print(\"Labels: \", list(some_labels))\n",
+    "\n",
+    "#print root mean squared error\n",
+    "#from sklearn.metrics import mean_squared_error\n",
+    "#housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "#lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "#lin_rmse = np.sqrt(lin_mse)\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "#try and train a DecisionTreeRegressor, a more powerful model, to try and find some complex nonlinear relationships in the data\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared, housing_labels)\n",
+    "#model is trained, now lets evaluate it on the training set\n",
+    "housing_predictions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse\n"
    ]
   },
   {
