start playing with MNIST data

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -818,18 +818,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores:  [51313.70958482 49316.31865905 51774.66242147 54526.39163414\n",
+      " 51773.64523451 56581.16551389 51062.71746773 50510.13953386\n",
+      " 55341.70670485 51722.44608821]\n",
+      "Mean:  52392.29028425428\n",
+      "Standard Deviation:  2189.7075533148295\n"
+     ]
     }
    ],
    "source": [
@@ -848,7 +851,7 @@
     "#print(\"Labels: \", list(some_labels))\n",
     "\n",
     "#print root mean squared error\n",
-    "#from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "#housing_predictions = lin_reg.predict(housing_prepared)\n",
     "#lin_mse = mean_squared_error(housing_labels, housing_predictions)\n",
     "#lin_rmse = np.sqrt(lin_mse)\n",
@@ -862,7 +865,108 @@
     "housing_predictions = tree_reg.predict(housing_prepared)\n",
     "tree_mse = mean_squared_error(housing_labels, housing_predictions)\n",
     "tree_rmse = np.sqrt(tree_mse)\n",
-    "tree_rmse\n"
+    "\n",
+    "#use cross-validation to check the accuracy of our decision tree model\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels, \n",
+    "                        scoring = \"neg_mean_squared_error\", cv=10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)\n",
+    "\n",
+    "def display_scores(scores):\n",
+    "    print(\"Scores: \", scores)\n",
+    "    print(\"Mean: \", scores.mean())\n",
+    "    print(\"Standard Deviation: \", scores.std())\n",
+    "    \n",
+    "#display_scores(tree_rmse_scores)\n",
+    "lin_scores = cross_val_score(lin_reg, housing_prepared, housing_labels, \n",
+    "                            scoring = \"neg_mean_squared_error\", cv=10)\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "#display_scores(lin_rmse_scores)\n",
+    "\n",
+    "#decision tree model overfitting so much it is outperformed by the linear regression model\n",
+    "#lets try out the RandomForestRegressor\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "forest_reg.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "housing_predictions = forest_reg.predict(housing_prepared)\n",
+    "forest_mse = mean_squared_error(housing_labels, housing_predictions)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "forest_scores = cross_val_score(forest_reg, housing_prepared, housing_labels,\n",
+    "                                scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "forest_rmse_scores = np.sqrt(-forest_scores)\n",
+    "\n",
+    "forest_rmse\n",
+    "\n",
+    "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 6, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#use GridSearch to try hyperparameter combinations in order to look for optimal ones\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3,10,30], 'max_features': [2,4,6,8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3,10], 'max_features':[2,3,4]},\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring= 'neg_mean_squared_error')\n",
+    "grid_search.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47949.623589850074"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#evalulate our system on the test set\n",
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "x_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "x_test_prepared = full_pipeline.transform(x_test)\n",
+    "\n",
+    "final_predictions = final_model.predict(x_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "\n",
+    "final_rmse"
    ]
   },
   {
@@ -1074,7 +1178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
